# se-news-bot

./: .gitignore  README.md  pyproject.toml
src/: db.py  settings.py  translate.py
src/dn_telegram/: bot.py
src/dnt_etl/: dn.py  extract.py  load.py  pipeline.py  transform.py
tests/: conftest.py  test_news_content_extraction.py
